...
                    ),
                  ),
              ),
              floatingActionButtonLocation:
                  FloatingActionButtonLocation.miniEndDocked,
              floatingActionButton: FloatingActionButton(
                key: Key("Switch to Sign in Button"),
                child: Icon(
                  Icons.assignment_ind_outlined,
                  size: 35,
                ),
                tooltip: 'Log In',
                splashColor: Color.fromARGB(255, 61, 131, 255),
...
                          children: <Widget>[
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                key: Key('emailfield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                controller: _pass,
                                key: Key('passwordfield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                            ),
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                key: Key('confirmfield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                            ),
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                key: Key('firstnamefield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                            ),
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                key: Key('lastnamefield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                            Container(
                              decoration: BoxDecoration(
                                  color: Colors.white,
                                  borderRadius: BorderRadius.circular(30)),
                              child: TextFormField(
                                keyboardType: TextInputType.number,
                                key: Key('agefield'),
                                onTap: () {
                                  setState(() {
                                    _isVisible = false;
                                  });
                                },
                                onChanged: (val) {
...
                              }
                            },
                            child: OurText(text: 'Register',
                              color: Colors.white,
                              underlined: false,
                              fontSize: 20,),
                            key: Key("SignUpButton"),
                            style: ElevatedButton.styleFrom(
                                primary: Colors.black45),
                          )),
                      SizedBox(height: 20),
                      Text(
                        '$error',
...
