...
                            ),
                          ]),
                        ))),
                    floatingActionButtonLocation:
                        FloatingActionButtonLocation.miniEndDocked,
                    floatingActionButton: FloatingActionButton(
                      key: Key("Switch to Register Button"),
                      child: Icon(
                        Icons.assignment_ind_outlined,
                        size: 35,
                      ),
                      tooltip: 'Register',
                      splashColor: Color.fromARGB(255, 61, 131, 255),
...
                      decoration: BoxDecoration(
                          color: Colors.white,
                          borderRadius: BorderRadius.circular(30)),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 25.0, right: 25),
                        child: TextFormField(
                          key: Key("Login Email Key"),
                          onChanged: (val) {
                            setState(() {
                              // widget.iconKey = Key(val);
                              email = val;
                              // print(widget.iconKey);
                            });
...
                      decoration: BoxDecoration(
                          color: Colors.white,
                          borderRadius: BorderRadius.circular(30)),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 25.0, right: 25),
                        child: TextFormField(
                          key: Key("Login Password Key"),
                          onChanged: (val) {
                            setState(() {
                              // widget.iconKey = Key(val);
                              password = val;
                              // print(widget.iconKey);
                            });
...
                  decoration: BoxDecoration(
                    border: Border.all(
                        color: Colors.white.withOpacity(0.4), width: 4),
                    shape: BoxShape.circle,
                  ),
                  child: ElevatedButton(
                    key: Key('Login Button'),
                    style: ElevatedButton.styleFrom(
                      fixedSize: const Size(200, 200),
                      shape: const CircleBorder(),
                    ),
                    onPressed: () async {
                      if (_validator.validateEmail(email) == true &&
...
                    decoration: BoxDecoration(
                        color: Colors.white,
                        borderRadius: BorderRadius.circular(30)),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 25.0, right: 25),
                      child: TextFormField(
                        key: Key("Guest Login key"),
                        onChanged: (val) {
                          setState(() {
                            // widget.iconKey = Key(val);
                            guestName = val;
                            // print(widget.iconKey);
                          });
...
                  decoration: BoxDecoration(
                    border: Border.all(
                        color: Colors.white.withOpacity(0.4), width: 4),
                    shape: BoxShape.circle,
                  ),
                  child: ElevatedButton(
                    key: Key('Guest Login Button'),
                    style: ElevatedButton.styleFrom(
                      fixedSize: const Size(200, 200),
                      shape: const CircleBorder(),
                    ),
                    onPressed: () async {
                      if (guestName != '') {
...
