...
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    _JoinGroup(context, groupID);
                  }
                },
                child: Text(
                  'Join',
                  style: TextStyle(color: Colors.white),
                ),
              )
            ],
          ),
        ),
...
