...
                      ),
                        onPressed: () async {
                          _LeaveGroup(context);
                        },
                        icon: Icon(Icons.logout),
                        label: Text(
                          'Leave Group',
                          style: TextStyle(
                              color: globals.textColours[colourIndex]),
                        ))
                  ],
                ),
              ),
...
