...
              Expanded(
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
                  children: [
                    !isMe ? Text(snapshot.data!.firstName,style: TextStyle(color: globals
                        .textColours[colourIndex],fontSize: 25),) : Text(
                    "You", style: TextStyle(color: globals
                    .textColours[colourIndex],fontSize: 25),),
                    Padding(
                      padding: const EdgeInsets.fromLTRB(0, 0, 10, 0),
                      child: leader
                                  ? Icon(
                                Icons.star_outlined, color: globals.textColours[colourIndex],)
...
