...
              onPressed: () async {
                if (_formKey.currentState!.validate()) {
                  _createGroup(context, groupName);
                }
              },
              child: Text(
                'Create',
                style: TextStyle(color: Colors.white),
              ),
            )
          ],
        ),
      );
...
